--- a/assets/sass/partials/_header.scss
+++ b/assets/sass/partials/_header.scss
@@ -57,7 +57,7 @@
     left:20px;
     width:100px;
     height:100px;
-    background:darkSlateGray;
+    background: #770a1d;
     border-radius:50%;
     position:absolute;
     z-index:21;
